# particle-filter

./: .gitignore  Makefile  README.md
R/: README.md  particleFilter.R
py/: Dockerfile  README.md  pyproject.toml
py/data/: testdata.txt
py/tasks/: particle_filter.py
