[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["hayata-yamamoto <hayata.yamamoto.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.3"
matplotlib = "^3.2.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
flake8 = "^3.7.9"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
